--- a/src/basic_cleaning/conda.yml
+++ b/src/basic_cleaning/conda.yml
@@ -4,6 +4,8 @@ channels:
   - defaults
 dependencies:
   - pip=23.3.1
+  - pandas=1.2.3
+  - ydata_profiling=3.6.6
   - pip:
       - mlflow==2.8.1
       - wandb==0.16.0
